# libmatpy

./: .gitignore  README.md  __init__.py  libmat.py
test/: CMakeLists.txt  test_dll.py  test_libmat.bat  test_libmat.cpp  testdata.mat
